# roscamp-repo-2

./: .gitconfig  .gitignore  README.md
src/bbi_gui/: package.xml  setup.cfg  setup.py
src/bbi_gui/bbi_gui/: main.py  payment.py  rack_select.py  work_request.py
src/bbi_gui/bbi_gui/ui/: Work_Dashboard.ui  login.ui  payment.ui  rack.ui  register.ui  work_request.ui
src/common_interfaces/: CMakeLists.txt  package.xml
src/db/: package.xml  setup.cfg  setup.py
src/db/db/: db_client.py  mysql_node.py
src/jetcobot1/: README.md  package.xml  setup.py
src/jetcobot1/jetcobot1/: box_tracker.py  main.py  package.xml  pause_control.py  setup.cfg  setup.py  voice_command_server.py  voice_pause_client.py
src/jetcobot1/jetcobot1/jetcobot1/: action_server.py  box_tracker.py  box_tracker_b.py  box_tracker_coord.py  calibration_test.py  matplotlib_z.py  pick.py  pick_and_place.py  pick_and_place_a.py  pick_and_place_b.py  pick_and_place_c.py  pick_test.py  test.py  test_x.py  test_y.py  test_z.py
src/jetcobot1/jetcobot1_ros2_dev/: README.md  action_server.py  main.py  pause_control.py  pick_and_place.py  voice_pause_client.py  weight_aging.py
src/jetcobot1/jetcobot_interfaces/: CMakeLists.txt  package.xml
src/jetcobot1/jetcobot_interfaces/action/: CobotCommand.action
src/jetcobot2/: package.xml  setup.cfg  setup.py
src/jetcobot2/jetcobot2/: __init__.py  action_server.py  cv_lib.py  cv_node.py  flask_node.py  qr_detector.py  rack_detector.py
src/jetcobot2/launch/: launch.py
src/jetcobot_interfaces/: package.xml
src/jetcobot_interfaces/action/: RobotCommand.action
src/pinky1/: .gitignore  package.xml  setup.cfg  setup.py
src/pinky1/config/: settings.py
src/pinky1/core/: robot_controller.py
src/pinky1/launch/: main.py
src/pinky1/navigation/: nav_manager.py
src/pinky1/pinky1/: get_pose.py  rotate_yaw.py
src/pinky1/pinky1/config/: settings.py
src/pinky1/pinky1/core/: robot_controller.py  visual_dock.py
src/pinky1/pinky1/launch/: main.py
src/pinky1/pinky1/navigation/: line_tracer.py  nav_manager.py  slam_manager.py
src/pinky1/pinky1/sensors/: sensor_manager.py
src/pinky1/pinky1/vision/: aruco_detector.py  yolo_detector.py
src/pinky2/: package.xml  setup.cfg  setup.py
src/pinky2/launch/: pinky2.launch.py
src/pinky2/pinky2/: auto_parking_node.py  exit_parking_node.py  pinky2_orchestrator_node.py
src/pinky2/util/: check_amcl_yaw.py
src/pinky2_cpp/: CMakeLists.txt  compile_commands.json  package.xml
src/pinky2_cpp/src/: auto_parking_node.cpp
src/ppi_gui/: package.xml  setup.cfg  setup.py
src/ppi_gui/ppi_gui/: camera_thread.py  main.py  payment.py  rack_select.py  work_request.py
src/ppi_gui/ppi_gui/ui/: login.ui  payment.ui  rack.ui  register.ui  work_dashboard.ui  work_request.ui
src/ppibigi_interfaces/: CMakeLists.txt  package.xml
src/server/: .env.example  .gitignore  docker-compose.yml
src/server/camera/: Dockerfile  camera_client.py  camera_server.py
src/server/llm/: .gitignore
src/server/llm/web/: Dockerfile  app.py  index.html  run.sh
src/server/llm/web/finetune/: Modelfile  finetune.py  import_to_ollama.sh  training_data.jsonl
src/server/task_manager/: Dockerfile
src/server/task_manager/msgs/: CMakeLists.txt  package.xml
src/server/task_manager/msgs/action/: RobotCommand.action
src/server/task_manager/task_manager/: package.xml  setup.py
src/server/task_manager/task_manager/task_manager/: dispatcher.py  task_manager.py  task_manager_pinky_test.py  task_queue.py  test_routes.py  zone_manager.py
src/taskmanager/: Dockerfile
src/taskmanager/pinky_msgs/: CMakeLists.txt  package.xml
src/taskmanager/task_manager/: package.xml
src/taskmanager/task_manager/task_manager/: task_manager.py
