<?xml version="1.0"?>
<package format="3">
  <name>jetcobot2</name>
  <version>0.0.0</version>
  <description>Jetcobot2 액션 서버</description>
  <maintainer email="jetcobot@todo.todo">jetcobot</maintainer>
  <license>Apache-2.0</license>
  
  <depend>rclpy</depend>
  <depend>rclpy_action</depend>
  <depend>common_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>