<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ppi_gui</name>
  <version>0.1.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ane@todo.todo">ane</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>python3-pyqt5</depend>
  <depend>db</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
