<?xml version="1.0"?>
<package format="3">
  <name>task_manager</name>
  <version>0.0.1</version>
  <description>Pinky warehouse robot task manager (ROS2 Action orchestrator)</description>
  <maintainer email="cksdid0907@gmail.com">sekim</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>pinky_msgs</depend>

  <exec_depend>python3-fastapi</exec_depend>
  <exec_depend>python3-uvicorn</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
