<?xml version="1.0"?>
<package format="3">
  <name>msgs</name>
  <version>0.0.1</version>
  <description>Pinky warehouse robot action messages</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rosidl_default_generators</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
